# LigandMPNN

./: .drone.yml  .gitignore  Dockerfile  LICENSE  README.md  data_utils.py  get_model_params.ps1  get_model_params.sh  model_utils.py  pyproject.toml  requirements.txt  run.py  run_examples.sh  sc_examples.sh  sc_utils.py  score.py  score_examples.sh
.github/workflows/: unit_tests_tag.yml
inputs/: bias_AA_per_residue.json  bias_AA_per_residue_multi.json  fix_residues_multi.json  omit_AA_per_residue.json  omit_AA_per_residue_multi.json  pdb_ids.json  redesigned_residues_multi.json
ligandmpnn/: __init__.py  data_utils.py  dataclass_utils.py  model_utils.py  sc_utils.py
ligandmpnn/config/: ligandmpnn.yaml
ligandmpnn/openfold/: __init__.py
openfold/: __init__.py
openfold/np/: protein.py  residue_constants.py
outputs/autoregressive_score_w_seq/: 1BC8_1.pt
outputs/autoregressive_score_wo_seq/: 1BC8_1.pt
outputs/batch_size/seqs/: 1BC8.fa
outputs/bias_AA_per_residue_multi/seqs/: 1BC8.fa  4GYT.fa
outputs/chains_to_design/seqs/: 4GYT.fa
outputs/fasta_seq_separation/seqs/: 1BC8.fa
outputs/fix_residues/seqs/: 1BC8.fa
outputs/fixed_residues_multi/seqs/: 1BC8.fa  4GYT.fa
outputs/global_bias/seqs/: 1BC8.fa
outputs/global_label_membrane_mpnn_0/seqs/: 1BC8.fa
outputs/global_omit/seqs/: 1BC8.fa
outputs/homooligomer/seqs/: 4GYT.fa
outputs/insertion_code/seqs/: 2GFB.fa
outputs/ligand_mpnn_cutoff_for_score/seqs/: 1BC8.fa
outputs/ligandmpnn_default/seqs/: 1BC8.fa
outputs/ligandmpnn_no_context/seqs/: 1BC8.fa
outputs/ligandmpnn_use_side_chain_atoms/seqs/: 1BC8.fa
outputs/omit_AA_per_residue_multi/seqs/: 1BC8.fa  4GYT.fa
outputs/parse_atoms_with_zero_occupancy/seqs/: 1BC8.fa
outputs/parse_these_chains_only/seqs/: 4GYT.fa
outputs/pdb_path_multi/seqs/: 1BC8.fa  4GYT.fa
outputs/per_residue_bias/seqs/: 1BC8.fa
outputs/per_residue_label_membrane_mpnn_default/seqs/: 1BC8.fa
outputs/single_aa_score_w_seq/: 1BC8_1.pt
outputs/single_aa_score_wo_seq/: 1BC8_1.pt
pretrained/: weights.csv
scripts/: run.py
scripts/retired/: run.py  score.py
training/: README.md  test_metal.json  test_nucleotide.json  test_small_molecule.json  train.json  valid.json
(+12 files in other folders)
